--- a/app/views/glucose_readings/_form.html.haml
+++ b/app/views/glucose_readings/_form.html.haml
@@ -7,16 +7,16 @@
           %li= msg
 
   .field
-    = f.label :user_id
-    = f.number_field :user_id
-  .field
     = f.label :glucose_value
     = f.number_field :glucose_value
   .field
     = f.label :reading_at
     = f.datetime_select :reading_at
   .field
+    = f.label :meal_code
+    = f.select :meal_code, @meal_codes
+  .field
     = f.label :comment
     = f.text_field :comment
   .actions
-    = f.submit 'Save'
+    = f.submit 'Log Reading'
