--- a/app/views/glucose_readings/edit.html.haml
+++ b/app/views/glucose_readings/edit.html.haml
@@ -1,7 +1,10 @@
-%h1 Editing glucose_reading
+-title "Blood Sugar Sex Magik: Edit Blood Glucose Reading for #{@user.user_name}"
 
-= render 'form'
-
-= link_to 'Show', @glucose_reading
-\|
-= link_to 'Back', glucose_readings_path
+%header#edit_blood_glucose_header
+  %h1= "Editing Blood Glucose Reading for #{@user.user_name}"
+%section#edit_blood_glucose_area
+  = render 'form'
+%nav
+  = link_to 'All Blood Glucose Readings', glucose_readings_path
+  \|
+  = link_to 'Account', current_user
