css updates and rebranding

--- a/app/views/glucose_readings/index.html.haml
+++ b/app/views/glucose_readings/index.html.haml
@@ -1,4 +1,4 @@
--title "Blood Sugar Sex Magik: Blood Glucose Readings for #{@user.user_name}"
+-title "Digital Pancreas: Blood Glucose Readings for #{@user.user_name}"
 
 %header#blood_glucose_index_header
   %h1= "Blood Glucose Readings for #{@user.user_name}"
