--- a/app/views/glucose_readings/new.html.haml
+++ b/app/views/glucose_readings/new.html.haml
@@ -1,4 +1,4 @@
--title "Blood Sugar Sex Magik: New Blood Glucose Reading"
+-title "Digital Pancreas: New Blood Glucose Reading"
 
 %header
   %h1 New Blood Glucose Reading
