--- a/app/views/glucose_readings/edit.html.haml
+++ b/app/views/glucose_readings/edit.html.haml
@@ -1,4 +1,4 @@
--title "Blood Sugar Sex Magik: Edit Blood Glucose Reading for #{@user.user_name}"
+-title "Digital Pancreas: Edit Blood Glucose Reading for #{@user.user_name}"
 
 %header#edit_blood_glucose_header
   %h1= "Editing Blood Glucose Reading for #{@user.user_name}"
