Refactored Glucose Reading. Now supports more measurements. Measure Math extracted to module.

--- a/app/views/glucose_readings/_form.html.haml
+++ b/app/views/glucose_readings/_form.html.haml
@@ -7,8 +7,8 @@
           %li= msg
 
   .field
-    = f.label :glucose_value
-    = f.number_field :glucose_value
+    = f.label :glucose
+    = f.number_field :glucose
   .field
     = f.label :reading_at
     = f.datetime_select :reading_at
