--- a/app/views/glucose_readings/show.html.haml
+++ b/app/views/glucose_readings/show.html.haml
@@ -5,7 +5,7 @@
   = @glucose_reading.user_id
 %p
   %b Glucose value:
-  = @glucose_reading.glucose_value
+  = @glucose_reading.glucose
 %p
   %b Reading at:
   = @glucose_reading.reading_at
