--- a/app/views/glucose_readings/_form.html.haml
+++ b/app/views/glucose_readings/_form.html.haml
@@ -1,22 +1,34 @@
 = form_for @glucose_reading do |f|
   -if @glucose_reading.errors.any?
     #error_explanation
-      %h2= "#{pluralize(@glucose_reading.errors.count, "error")} prohibited this glucose_reading from being saved:"
+      %h2= "#{pluralize(@glucose_reading.errors.count, "error")} prohibited this entry from being saved:"
       %ul
         - @glucose_reading.errors.full_messages.each do |msg|
           %li= msg
 
   .field
+    = f.label :reading_at, 'Time'
+    = f.text_field :reading_at, value: f.object.reading_at.strftime('%Y-%m-%d %H:%M')
+  .field
+    = f.label :meal_code, 'Meal'
+    = f.select :meal_code, @meal_codes
+  .field
     = f.label :glucose
     = f.number_field :glucose
   .field
-    = f.label :reading_at
-    = f.datetime_select :reading_at
+    = f.label :carbs
+    = f.number_field :carbs
   .field
-    = f.label :meal_code
-    = f.select :meal_code, @meal_codes
+    = f.label :exercise
+    = f.number_field :exercise
+  .field
+    = f.label :bolus
+    = f.number_field :bolus
+  .field
+    = f.label :basal
+    = f.number_field :basal
   .field
     = f.label :comment
     = f.text_field :comment
   .actions
-    = f.submit 'Log Reading'
+    = f.submit 'Log'
