--- a/app/views/glucose_readings/index.html.haml
+++ b/app/views/glucose_readings/index.html.haml
@@ -1,25 +1,32 @@
 -title "Digital Pancreas: Blood Glucose Readings for #{@user.user_name}"
 
-%header#blood_glucose_index_header
-  %h1= "Blood Glucose Readings for #{@user.user_name}"
-%section#blood_glucose_index
-  %table
-    %tr
-      %th Reading at
-      %th Meal Code
-      %th Glucose value
-      %th Comment
-      %th
-      %th
-    - @glucose_readings.each do |glucose_reading|
+%section#blood_glucose_readings
+  %header#blood_glucose_index_header
+    %h1= "Blood Glucose Readings for #{@user.user_name}"
+  %section#blood_glucose_index
+    %table
       %tr
-        %td= nice_date(glucose_reading.reading_at)
-        %td= glucose_reading.meal_code_name
-        %td= glucose_reading.glucose
-        %td= glucose_reading.comment
-        %td= link_to 'Edit', edit_glucose_reading_path(glucose_reading)
-        %td= link_to 'Delete', glucose_reading, :confirm => 'Are you sure?', :method => :delete
-%nav
-  = link_to 'New Blood Glucose Reading', new_glucose_reading_path
-  \|
-  = link_to 'Account', current_user
+        %th Reading
+        %th Meal
+        %th Glucose
+        %th Carbs
+        %th Exercise
+        %th Bolus
+        %th Basal
+        %th Comment
+        %th
+        %th
+      - @glucose_readings.each do |glucose_reading|
+        %tr
+          %td= nice_date(glucose_reading.reading_at)
+          %td= glucose_reading.meal_code_name
+          %td= glucose_reading.glucose
+          %td= glucose_reading.carbs
+          %td= glucose_reading.exercise
+          %td= glucose_reading.bolus
+          %td= glucose_reading.basal
+          %td= glucose_reading.comment
+          %td= link_to 'Edit', edit_glucose_reading_path(glucose_reading)
+          %td= link_to 'Delete', glucose_reading, :confirm => 'Are you sure?', :method => :delete
+  %nav#account_navigation
+    
