--- a/app/assets/stylesheets/glucose_readings.css.sass
+++ b/app/assets/stylesheets/glucose_readings.css.sass
@@ -10,6 +10,8 @@ section#reading_entry
         width: percentage(220/336)
     .actions
       +standard-margin(368)
+      input[type=submit]
+        float: right
 
 section#blood_glucose_readings
   +content_area(400,2em,false)
