--- a/app/views/glucose_readings/_form.html.haml
+++ b/app/views/glucose_readings/_form.html.haml
@@ -31,4 +31,4 @@
     = f.label :comment
     = f.text_field :comment
   .actions
-    = f.submit 'Log'
+    = f.submit 'Save', disable_with: 'Saving'
